--- a/youtube_video_data.ipynb
+++ b/youtube_video_data.ipynb
@@ -10,8 +10,7 @@
     "from apiclient.errors import HttpError\n",
     "from oauth2client.tools import argparser\n",
     "import pandas as pd\n",
-    "import pprint \n",
-    "import matplotlib.pyplot as plt"
+    "import pprint"
    ]
   },
   {
@@ -44,123 +43,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'kind': 'youtube#videoListResponse',\n",
-       " 'etag': '\"XI7nbFXulYBIpL0ayR_gDh3eu1k/DynCWpF92GMHt-od8LgMSwtKHho\"',\n",
-       " 'pageInfo': {'totalResults': 1, 'resultsPerPage': 1},\n",
-       " 'items': [{'kind': 'youtube#video',\n",
-       "   'etag': '\"XI7nbFXulYBIpL0ayR_gDh3eu1k/Y4qPE1oh7pV6IR74ZPw0iIBLdI0\"',\n",
-       "   'id': 'N7-dg88gj6M',\n",
-       "   'snippet': {'publishedAt': '2018-09-20T17:48:38.000Z',\n",
-       "    'channelId': 'UC8p1vwvWtl6T73JiExfWs1g',\n",
-       "    'title': 'Multiple people killed in Maryland shooting',\n",
-       "    'description': 'Several people were killed and others were wounded Thursday in a shooting at a Rite Aid distribution center in Maryland. Officials said the suspect was wounded and in custody.',\n",
-       "    'thumbnails': {'default': {'url': 'https://i.ytimg.com/vi/N7-dg88gj6M/default.jpg',\n",
-       "      'width': 120,\n",
-       "      'height': 90},\n",
-       "     'medium': {'url': 'https://i.ytimg.com/vi/N7-dg88gj6M/mqdefault.jpg',\n",
-       "      'width': 320,\n",
-       "      'height': 180},\n",
-       "     'high': {'url': 'https://i.ytimg.com/vi/N7-dg88gj6M/hqdefault.jpg',\n",
-       "      'width': 480,\n",
-       "      'height': 360},\n",
-       "     'standard': {'url': 'https://i.ytimg.com/vi/N7-dg88gj6M/sddefault.jpg',\n",
-       "      'width': 640,\n",
-       "      'height': 480}},\n",
-       "    'channelTitle': 'CBS News',\n",
-       "    'tags': ['U.S.',\n",
-       "     'Maryland',\n",
-       "     'shooting',\n",
-       "     'aberdeen',\n",
-       "     'perryman',\n",
-       "     'top stories',\n",
-       "     'crime'],\n",
-       "    'categoryId': '25',\n",
-       "    'liveBroadcastContent': 'none',\n",
-       "    'localized': {'title': 'Multiple people killed in Maryland shooting',\n",
-       "     'description': 'Several people were killed and others were wounded Thursday in a shooting at a Rite Aid distribution center in Maryland. Officials said the suspect was wounded and in custody.'},\n",
-       "    'defaultAudioLanguage': 'en'},\n",
-       "   'statistics': {'viewCount': '520969',\n",
-       "    'likeCount': '2115',\n",
-       "    'dislikeCount': '297',\n",
-       "    'favoriteCount': '0',\n",
-       "    'commentCount': '2406'}}]}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "video_id = 'N7-dg88gj6M'\n",
-    "youtube_video_data(id=video_id)"
+    "video_id =  'F9C8yg6yE7Y'#'N7-dg88gj6M' #'GrLMvREvtI4'\n",
+    "video_data = youtube_video_data(id=video_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "    title = []\n",
-    "    tags = []\n",
-    "    \n",
-    "    for search_result in video_data.get(\"items\", []):\n",
-    "        if search_result[\"id\"][\"kind\"] == \"youtube#video\":\n",
-    "\n",
-    "            title.append(search_result['snippet']['title']) \n",
-    "\n",
-    "            videoId.append(search_result['id']['videoId'])\n",
-    "\n",
-    "            response = youtube.videos().list(\n",
-    "                part='statistics, snippet',\n",
-    "                id=search_result['id']['videoId']).execute()\n",
-    "\n",
-    "            channelId.append(response['items'][0]['snippet']['channelId'])\n",
-    "            channelTitle.append(response['items'][0]['snippet']['channelTitle'])\n",
-    "            categoryId.append(response['items'][0]['snippet']['categoryId'])\n",
-    "            favoriteCount.append(response['items'][0]['statistics']['favoriteCount'])\n",
-    "            viewCount.append(response['items'][0]['statistics']['viewCount'])\n",
-    "            likeCount.append(response['items'][0]['statistics']['likeCount'])\n",
-    "            dislikeCount.append(response['items'][0]['statistics']['dislikeCount'])\n",
-    " \n",
-    "        if 'commentCount' in response['items'][0]['statistics'].keys():\n",
-    "            commentCount.append(response['items'][0]['statistics']['commentCount'])\n",
-    "        else:\n",
-    "            commentCount.append([])\n",
-    "      \n",
-    "        if 'tags' in response['items'][0]['snippet'].keys():\n",
-    "            tags.append(response['items'][0]['snippet']['tags'])\n",
-    "        else:\n",
-    "            tags.append([])\n",
-    "\n",
-    "    youtube_dict = {'tags':tags,\n",
-    "                    'channelId': channelId,\n",
-    "                    'channelTitle': channelTitle,\n",
-    "                    'categoryId':categoryId,\n",
-    "                    'title':title,\n",
-    "                    'videoId':videoId,\n",
-    "                    'viewCount':viewCount,\n",
-    "                    'likeCount':likeCount,\n",
-    "                    'dislikeCount':dislikeCount,\n",
-    "                    'commentCount':commentCount,\n",
-    "                    'favoriteCount':favoriteCount}\n",
-    "\n",
-    "    return youtube_dict"
+    "title = video_data['items'][0]['snippet']['title']\n",
+    "channelId = video_data['items'][0]['snippet']['channelId']\n",
+    "tags = video_data['items'][0]['snippet']['tags']\n",
+    "description = video_data['items'][0]['snippet']['description']"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
