Added scripts for downloading and transcribing multiple ytIDs

--- a/transcribe_gcs.ipynb
+++ b/transcribe_gcs.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -70,9 +70,26 @@
     }
    ],
    "source": [
-    "filename = 'yt2' + '.wav'\n",
-    "audio_file = 'gs://audio_a/tests/' + filename\n",
+    "filename =   '__Y8cJASy50-cropped.wav'\n",
+    "audio_file = 'gs://youtube_wavs/' + filename\n",
     "t, c = transcribe_gcs(audio_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.970911979675293\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(c)"
    ]
   },
   {
