--- a/youtube_video_data.ipynb
+++ b/youtube_video_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,18 +15,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DEVELOPER_KEY = \"AIzaSyAK4sshEC5Ku1LmGkM5TcHzhUdJc6F1X0Q\"\n",
+    "with open('/Users/daniel/Documents/Work/ProDev/Data Science/Keys/google_api_devkey.txt', 'r') as myfile:\n",
+    "    DEVELOPER_KEY = myfile.read().replace('\\n', '')\n",
+    "    \n",
     "YOUTUBE_API_SERVICE_NAME = \"youtube\"\n",
     "YOUTUBE_API_VERSION = \"v3\""
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gets video data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,12 +52,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "video_id =  'F9C8yg6yE7Y'#'N7-dg88gj6M' #'GrLMvREvtI4'\n",
-    "video_data = youtube_video_data(id=video_id)"
+    "video_id =  'N7-dg88gj6M' #'GrLMvREvtI4'\n",
+    "Test_video_data = youtube_video_data(id=video_id)"
    ]
   },
   {
@@ -61,6 +70,101 @@
     "channelId = video_data['items'][0]['snippet']['channelId']\n",
     "tags = video_data['items'][0]['snippet']['tags']\n",
     "description = video_data['items'][0]['snippet']['description']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Gets comments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def comment_threads_list_by_video_id(id):\n",
+    "    # This builds a Google API service object\n",
+    "    youtube = build(YOUTUBE_API_SERVICE_NAME, YOUTUBE_API_VERSION,developerKey=DEVELOPER_KEY)\n",
+    "    \n",
+    "    video_comments = youtube.commentThreads().list(\n",
+    "    videoId = id,\n",
+    "    part=\"snippet,replies\").execute()\n",
+    "    return video_comments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_comments = comment_threads_list_by_video_id(video_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Returns actual comment text of first comment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_comments['items'][i]['snippet']['topLevelComment']['snippet']['textDisplay']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from html.parser import HTMLParser\n",
+    "\n",
+    "class MLStripper(HTMLParser):\n",
+    "    def __init__(self):\n",
+    "        self.reset()\n",
+    "        self.strict = False\n",
+    "        self.convert_charrefs= True\n",
+    "        self.fed = []\n",
+    "    def handle_data(self, d):\n",
+    "        self.fed.append(d)\n",
+    "    def get_data(self):\n",
+    "        return ''.join(self.fed)\n",
+    "\n",
+    "def strip_tags(html):\n",
+    "    s = MLStripper()\n",
+    "    s.feed(html)\n",
+    "    return s.get_data()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Turns all comments in JSON object into a single string without html tags"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comment_items = test_comments['items']\n",
+    "\n",
+    "comments = []\n",
+    "for sub_block in comment_items:\n",
+    "    comments.append(strip_tags(sub_block['snippet']['topLevelComment']['snippet']['textDisplay']))\n",
+    "\n",
+    "comments_all = ' '.join(comments)"
    ]
   }
  ],
