--- a/youtube_to_gc.ipynb
+++ b/youtube_to_gc.ipynb
@@ -9,29 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/daniel/Documents/Work/ProDev/Data Science/Insight Project 2/yt2.mp4'"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from pytube import YouTube\n",
     "\n",
     "url = 'https://www.youtube.com/watch?v=N7-dg88gj6M' #47s news clip sensitive subject\n",
-    "url = 'https://www.youtube.com/watch?v=6NHGLQkxBcg' # Anita S losing it\n",
+    "#url = 'https://www.youtube.com/watch?v=LDKw0Yr2KnA' \n",
+    "\n",
     "\n",
     "yt = YouTube(url)\n",
     "filename = 'yt2'\n",
-    "yt.streams.filter(only_audio=True).first().download(filename=filename)\n",
+    "if yt.streams.filter(only_audio=True).all():\n",
+    "    yt.streams.filter(only_audio=True).first().download(filename=filename)\n",
     "\n",
     "#yt.streams.filter(only_audio=True).all() #shows all available streams\n",
     "#YouTube('https://www.youtube.com/watch?v=_iSyYsv-5Oo').streams.first().download() # downloads best video"
