--- a/text_classification/classify_edu.ipynb
+++ b/text_classification/classify_edu.ipynb
@@ -176,18 +176,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Vectorize raw test data\n",
-    "vectorizer = TfidfVectorizer()\n",
+    "vectorizer = TfidfVectorizer(max_features = 1000, ngram_range = (1,2))\n",
     "X_train = vectorizer.fit_transform(X_train_raw)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,14 +212,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.81132075 0.88679245 0.86792453 0.86538462 0.82692308]\n"
+      "[0.83018868 0.88679245 0.88679245 0.90384615 0.86538462]\n"
      ]
     }
    ],
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -251,10 +251,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "        edu       0.84      0.84      0.84       123\n",
-      "        rec       0.86      0.86      0.86       140\n",
+      "        edu       0.86      0.84      0.85       123\n",
+      "        rec       0.86      0.88      0.87       140\n",
       "\n",
-      "avg / total       0.85      0.85      0.85       263\n",
+      "avg / total       0.86      0.86      0.86       263\n",
       "\n"
      ]
     }
@@ -266,15 +266,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scores for default:\n",
+    "[0.81132075 0.88679245 0.86792453 0.86538462 0.82692308]\n",
+    "\n",
+    "                  precision    recall  f1-score   support\n",
+    "\n",
+    "        edu       0.84      0.84      0.84       123\n",
+    "        rec       0.86      0.86      0.86       140\n",
+    "        avg/total 0.85      0.85      0.85       263\n",
+    "        \n",
+    "With 1-3 ngrams same f1 score, less balanced for category\n",
+    "Best with max features = 1000, ngrams 1-2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['This transcript was classified as rec, with a probability of 0.5823674460678282']\n",
+      "['This transcript was classified as rec, with a probability of 0.5616719480565042']\n",
       "should I get your jacket that you took mine is not dead or something like that it's because of romantic movies they set the bar too high for the rest of us what does the same thing every year I thought about it actually idea that we should do that is a trailer and also the mean \n"
      ]
     }
@@ -296,14 +313,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['jeans' 'somebody' 'should']\n"
+      "['you know' 'with my' 'somebody']\n"
      ]
     }
    ],
@@ -319,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
