--- a/text_classification/classify_pol.ipynb
+++ b/text_classification/classify_pol.ipynb
@@ -108,18 +108,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Vectorize raw test data\n",
-    "vectorizer = TfidfVectorizer()\n",
+    "vectorizer = TfidfVectorizer(ngram_range = (1,2))\n",
     "X_train = vectorizer.fit_transform(X_train_raw)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,14 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.82261087 0.798125   0.8325     0.824375   0.81801126]\n"
+      "[0.82073704 0.811875   0.8225     0.82625    0.82363977]\n"
      ]
     }
    ],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -183,17 +183,39 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "       left       0.88      0.84      0.86      3989\n",
-      "      right       0.85      0.88      0.86      4011\n",
+      "       left       0.87      0.86      0.87      3989\n",
+      "      right       0.86      0.88      0.87      4011\n",
       "\n",
-      "avg / total       0.86      0.86      0.86      8000\n",
+      "avg / total       0.87      0.87      0.87      8000\n",
       "\n"
      ]
     }
    ],
    "source": [
+    "# report metrics\n",
     "from sklearn.metrics import classification_report\n",
     "print(classification_report(y_test, predictions))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "for vectorizer = TfidfVectorizer(ngram_range = (1,3)):\n",
+    "\n",
+    "Scores\n",
+    "[0.81449094 0.80125    0.813125   0.824375   0.8217636 ]\n",
+    "\n",
+    "Report\n",
+    "             precision    recall  f1-score   support\n",
+    "\n",
+    "       left       0.82      0.89      0.85      3989\n",
+    "      right       0.88      0.80      0.84      4011\n",
+    "\n",
+    "avg / total       0.85      0.84      0.84      8000\n",
+    "\n",
+    "All defaults was 0.86, same with english stopwords. With max_features = 1000 it's .81\n",
+    "Best is ngrams 1-2 at .87, all else default"
    ]
   },
   {
@@ -208,14 +230,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['This transcript was classified as right, with a probability of 0.9207456226331542']\n",
+      "['This transcript was classified as politically right, with a probability of 0.8802743962280438']\n",
       "The images are horrific. Who can forget the video of masked Islamic jihadists on a beach beheading Christians    executing them   for the world to see? And while there has been condemnation of the massacre of Christians and other religious minorities in the Middle East, there’s \n"
      ]
     }
@@ -231,13 +253,13 @@
     "    class_prob = exemplar_prob[0][0]\n",
     "else: class_prob = exemplar_prob[0][1]\n",
     "\n",
-    "print('This transcript was classified as ' + exemplar_cat + ', with a probability of ' + str(class_prob))\n",
+    "print('This transcript was classified as politically ' + exemplar_cat + ', with a probability of ' + str(class_prob))\n",
     "print(text[1:280])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -259,8 +281,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save/Load classifier"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,6 +314,52 @@
     "classifier_pol_bias = pickle.load(fileObject)  \n",
     "fileObject.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ﬂed', 'keola', 'kentwood', 'kenyatta', 'kenzaburo', 'kenzie', 'kenzo', 'keohane', 'keokuk', 'keoni']\n"
+     ]
+    }
+   ],
+   "source": [
+    "indices = np.argsort(vectorizer.idf_)[::-1]\n",
+    "features = vectorizer.get_feature_names()\n",
+    "top_n = 10\n",
+    "top_features = [features[i] for i in indices[:top_n]]\n",
+    "print(top_features)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict\n",
+    "\n",
+    "features_by_gram = defaultdict(list)\n",
+    "for f, w in zip(vectorizer.get_feature_names(), vectorizer.idf_):\n",
+    "    features_by_gram[len(f.split(' '))].append((f, w))\n",
+    "top_n = 2\n",
+    "for gram, features in features_by_gram.items():\n",
+    "    top_features = sorted(features, key=lambda x: x[1], reverse=True)[:top_n]\n",
+    "    top_features = [f[0] for f in top_features]\n",
+    "    #print '{}-gram top:'.format(gram), top_features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
