Removed big files

--- a/text_classification/classify_pol.ipynb
+++ b/text_classification/classify_pol.ipynb
@@ -80,7 +80,7 @@
     "\n",
     "\n",
     "# load dataset prepared in wrangle_news.py\n",
-    "news = pd.read_csv('news.csv', index_col=0)\n",
+    "news = pd.read_csv('/Users/daniel/Documents/Work/ProDev/Data Science/video_digest/text_classification_all/news.csv', index_col=0)\n",
     "news.head()"
    ]
   },
