Functions to get video metadata and comments

--- a/text_classification/classify_pol.ipynb
+++ b/text_classification/classify_pol.ipynb
@@ -230,15 +230,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Breitbart Coulter transcript\n",
+    "with open('transcript_bb_coulter.txt', 'r') as myfile:\n",
+    "    text=myfile.read().replace('\\n', '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['This transcript was classified as politically right, with a probability of 0.8802743962280438']\n",
-      "The images are horrific. Who can forget the video of masked Islamic jihadists on a beach beheading Christians    executing them   for the world to see? And while there has been condemnation of the massacre of Christians and other religious minorities in the Middle East, there’s \n"
+      "['This transcript was classified as politically right, with a probability of 0.7226171835505644']\n",
+      "this is you know these Dreams by Masters they are idea for flipping an election to Trump is will take out these 13 Russians will put Facebook ads Annapolis way that will have will be putting our finger on on this election more than the entire media in the United States no match \n"
      ]
     }
    ],
@@ -259,14 +270,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['genocide' 'the' 'christians']\n"
+      "['the' 'on on' 'dominant on']\n"
      ]
     }
    ],
