--- a/transcribe_gcs.ipynb
+++ b/transcribe_gcs.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,21 +70,21 @@
     }
    ],
    "source": [
-    "filename =   '__Y8cJASy50-cropped.wav'\n",
-    "audio_file = 'gs://youtube_wavs/' + filename\n",
+    "filename =   'yt2.wav'\n",
+    "audio_file = 'gs://audio_a/tests/' + filename\n",
     "t, c = transcribe_gcs(audio_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.970911979675293\n"
+      "0.9662185907363892\n"
      ]
     }
    ],
@@ -101,14 +101,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "transcript = open(\"transcript2.txt\", \"w\")\n",
+    "transcript = open(\"transcript_bb_coulter.txt\", \"w\")\n",
     "transcript.write(t)\n",
     "transcript.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
