--- a/youtube_to_gc.ipynb
+++ b/youtube_to_gc.ipynb
@@ -9,15 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from pytube import YouTube\n",
     "\n",
     "url = 'https://www.youtube.com/watch?v=N7-dg88gj6M' #47s news clip sensitive subject\n",
-    "#url = 'https://www.youtube.com/watch?v=LDKw0Yr2KnA' \n",
-    "\n",
+    "#url = 'https://www.youtube.com/watch?v=LDKw0Yr2KnA' cxRVohjplW4\n",
+    "url = 'https://www.youtube.com/watch?v=cxRVohjplW4'\n",
     "\n",
     "yt = YouTube(url)\n",
     "filename = 'yt2'\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "<_io.BufferedRandom name='yt2.wav'>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,14 +69,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<Bucket: audio_a>]\n"
+      "[<Bucket: audio_a>, <Bucket: youtube_wavs>]\n"
      ]
     }
    ],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,20 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fuck_history.wav\n",
-      "musk_clip_mono.wav\n",
-      "tests/yt1.wav\n",
-      "tests/yt2.wav\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def list_blobs(bucket_name):\n",
     "    \"\"\"Lists all the blobs in the bucket.\"\"\"\n",
@@ -137,11 +126,60 @@
     "    bucket = storage_client.get_bucket(bucket_name)\n",
     "\n",
     "    blobs = bucket.list_blobs()\n",
-    "\n",
+    "    \n",
+    "    file_list = []\n",
     "    for blob in blobs:\n",
-    "        print(blob.name)\n",
-    "        \n",
-    "list_blobs('audio_a')"
+    "        file = blob.name\n",
+    "        file_list.append(file)\n",
+    "    \n",
+    "    return file_list\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['fuck_history.wav',\n",
+       " 'musk_clip_mono.wav',\n",
+       " 'tests/N7-dg88gj6M.wav',\n",
+       " 'tests/yt1.wav',\n",
+       " 'tests/yt2.wav',\n",
+       " 'tests/yt3.wav']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ls = list_blobs('audio_a')\n",
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'tests/N7-dg88gj6M.wav' in ls"
    ]
   },
   {
