--- a/youtube_video_data.ipynb
+++ b/youtube_video_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,14 +62,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "title = video_data['items'][0]['snippet']['title']\n",
-    "channelId = video_data['items'][0]['snippet']['channelId']\n",
-    "tags = video_data['items'][0]['snippet']['tags']\n",
-    "description = video_data['items'][0]['snippet']['description']"
+    "video_data = Test_video_data\n",
+    "\n",
+    "d = {'title' : video_data['items'][0]['snippet']['title'],\n",
+    "    'channelId' : video_data['items'][0]['snippet']['channelId'],\n",
+    "    'tags' : video_data['items'][0]['snippet']['tags'],\n",
+    "    'description' : video_data['items'][0]['snippet']['description'],\n",
+    "    'views' : video_data['items'][0]['statistics']['viewCount'],\n",
+    "    'likes' : video_data['items'][0]['statistics']['likeCount'],\n",
+    "    'n_comments' : video_data['items'][0]['statistics']['commentCount']}"
    ]
   },
   {
