TF-IDF models, YouTube URL parser

--- a/text_classification/classify_pol.ipynb
+++ b/text_classification/classify_pol.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# TF-IDF Log. Reg. classifier for educational vs entertainment YouTube videos\n",
+    "## Training"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +77,7 @@
        "4  left  The great American consumer is very much alive..."
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,18 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Vectorize raw test data\n",
-    "vectorizer = TfidfVectorizer(ngram_range = (1,2))\n",
+    "vectorizer = TfidfVectorizer(max_features = 1000, ngram_range = (1,2))\n",
     "X_train = vectorizer.fit_transform(X_train_raw)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +139,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,14 +152,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.82073704 0.811875   0.8225     0.82625    0.82363977]\n"
+      "[0.783125 0.8025   0.7925   0.79875  0.786875]\n"
      ]
     }
    ],
@@ -164,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -183,10 +191,10 @@
      "text": [
       "             precision    recall  f1-score   support\n",
       "\n",
-      "       left       0.87      0.86      0.87      3989\n",
-      "      right       0.86      0.88      0.87      4011\n",
+      "       left       0.82      0.80      0.81      3925\n",
+      "      right       0.81      0.82      0.82      4075\n",
       "\n",
-      "avg / total       0.87      0.87      0.87      8000\n",
+      "avg / total       0.81      0.81      0.81      8000\n",
       "\n"
      ]
     }
@@ -220,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,21 +249,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['This transcript was classified as politically right, with a probability of 0.7226171835505644']\n",
+      "['This transcript was classified as politically right, with a probability of 0.8877218676049035']\n",
       "this is you know these Dreams by Masters they are idea for flipping an election to Trump is will take out these 13 Russians will put Facebook ads Annapolis way that will have will be putting our finger on on this election more than the entire media in the United States no match \n"
      ]
     }
    ],
    "source": [
     "# Single prediction\n",
-    "text = X_test_raw[20583]\n",
+    "#text = X_test_raw[20583]\n",
     "exemplar = vectorizer.transform([text]) # example string\n",
     "exemplar_cat = classifier.predict(exemplar) # returns category\n",
     "exemplar_prob = classifier.predict_proba(exemplar) # returns probability\n",
@@ -270,14 +278,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['the' 'on on' 'dominant on']\n"
+      "['the' 'and' 'media']\n"
      ]
     }
    ],
@@ -292,77 +300,102 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Save/Load classifier"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Save trained LR model\n",
     "import pickle\n",
     "\n",
-    "file_Name = \"classifier_pol\"\n",
-    "\n",
-    "fileObject = open(file_Name,'wb') \n",
-    "pickle.dump(classifier,fileObject)   \n",
-    "fileObject.close()"
+    "pickle.dump(vectorizer, open(\"vectorizer_pol1000.pickle\", \"wb\"))\n",
+    "pickle.dump(classifier, open(\"classifier_pol1000.pickle\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classification with canned model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# To open the file for reading\n",
-    "fileObject = open(file_Name,'rb')\n",
-    "classifier_pol_bias = pickle.load(fileObject)  \n",
-    "fileObject.close()"
+    "import pickle\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.linear_model.logistic import LogisticRegression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorizer = pickle.load(open(\"vectorizer_pol.pickle\", \"rb\"))\n",
+    "classifier = pickle.load(open(\"classifier_pol.pickle\", \"rb\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ﬂed', 'keola', 'kentwood', 'kenyatta', 'kenzaburo', 'kenzie', 'kenzo', 'keohane', 'keokuk', 'keoni']\n"
+      "['This transcript was classified as left, with a probability of 0.554473948932235']\n",
+      "multiple people have been killed and wounded in Perryman which is about 30 miles Northeast of Baltimore the shooting happened at a Rite Aid distribution center the investigation is still fluid but we know that the FBI and the ATF for helping out here is Harford County Sheriff Je\n"
      ]
     }
    ],
    "source": [
-    "indices = np.argsort(vectorizer.idf_)[::-1]\n",
-    "features = vectorizer.get_feature_names()\n",
-    "top_n = 10\n",
-    "top_features = [features[i] for i in indices[:top_n]]\n",
-    "print(top_features)"
+    "# Single prediction\n",
+    "with open('N7-dg88gj6M_t.txt', 'r') as myfile:\n",
+    "             transcript=myfile.read().replace('\\n', '')\n",
+    "        \n",
+    "text = transcript\n",
+    "\n",
+    "exemplar = vectorizer.transform([text]) # example string\n",
+    "exemplar_cat = classifier.predict(exemplar) # returns category\n",
+    "exemplar_prob = classifier.predict_proba(exemplar) # returns probability\n",
+    "\n",
+    "if exemplar_prob[0][0] > exemplar_prob[0][1]:\n",
+    "    class_prob = exemplar_prob[0][0]\n",
+    "else: class_prob = exemplar_prob[0][1]\n",
+    "\n",
+    "print('This transcript was classified as ' + exemplar_cat + ', with a probability of ' + str(class_prob))\n",
+    "print(text[1:280])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['the' 'harford county' 'sheriff jeffrey']\n"
+     ]
+    }
+   ],
    "source": [
-    "from collections import defaultdict\n",
+    "# Most important features\n",
+    "feature_array = np.array(vectorizer.get_feature_names())\n",
+    "tfidf_sorting = np.argsort(exemplar.toarray()).flatten()[::-1]\n",
     "\n",
-    "features_by_gram = defaultdict(list)\n",
-    "for f, w in zip(vectorizer.get_feature_names(), vectorizer.idf_):\n",
-    "    features_by_gram[len(f.split(' '))].append((f, w))\n",
-    "top_n = 2\n",
-    "for gram, features in features_by_gram.items():\n",
-    "    top_features = sorted(features, key=lambda x: x[1], reverse=True)[:top_n]\n",
-    "    top_features = [f[0] for f in top_features]\n",
-    "    #print '{}-gram top:'.format(gram), top_features"
+    "n = 3\n",
+    "top_n = feature_array[tfidf_sorting][:n]\n",
+    "print(top_n)"
    ]
   },
   {
