--- a/text_classification/classify_edu.ipynb
+++ b/text_classification/classify_edu.ipynb
@@ -1,149 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ytID</th>\n",
-       "      <th>transcript</th>\n",
-       "      <th>confidence</th>\n",
-       "      <th>channelId</th>\n",
-       "      <th>title</th>\n",
-       "      <th>tags</th>\n",
-       "      <th>description</th>\n",
-       "      <th>duration</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>--rJwJuXuOI</td>\n",
-       "      <td>yeah Peter Fairly OddParents Danny Phantom TU...</td>\n",
-       "      <td>0.931320</td>\n",
-       "      <td>UC80Z-cIOdR6upfnrPJ8Q00A</td>\n",
-       "      <td>Becoming a CARTOON! | Thomas Sanders feat. But...</td>\n",
-       "      <td>Thomas Sanders thomas sanders vine thomas sand...</td>\n",
-       "      <td>By now, I think it's pretty apparent that I ha...</td>\n",
-       "      <td>551.0</td>\n",
-       "      <td>rec</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>-4XvTqhMbjo</td>\n",
-       "      <td>season 2  if you have been watching since</td>\n",
-       "      <td>0.920828</td>\n",
-       "      <td>UCIRwyPYF1_7mCplRFGB_Png</td>\n",
-       "      <td>Tatianna featuring Katya The Same Parts</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>Night Of The Living Drag @ Stage 48 \\nNYC\\n10/...</td>\n",
-       "      <td>394.0</td>\n",
-       "      <td>rec</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-4YF2u-wx7A</td>\n",
-       "      <td>what does feminism mean to you I think there'...</td>\n",
-       "      <td>0.946498</td>\n",
-       "      <td>UCi_BjZoqPnMmkCLv2FlyBxQ</td>\n",
-       "      <td>What Does Feminism Mean to You? (Smart Snacks ...</td>\n",
-       "      <td>smart girls chvrches indie music independent l...</td>\n",
-       "      <td>Anna Bulbrook (GIRLSCHOOL, The Bulls, The Airb...</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>edu</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>-4bGPF-8Syo</td>\n",
-       "      <td>walking Hills like her she came in looking li...</td>\n",
-       "      <td>0.854905</td>\n",
-       "      <td>UCfm4y4rHF5HGrSr-qbvOwOg</td>\n",
-       "      <td>Three Girls, One Elevator (ft. Zendaya &amp; Winni...</td>\n",
-       "      <td>iisuperwomanii iisuperwomenii superwoman super...</td>\n",
-       "      <td>Wouldn't it be awesome if more women said hi t...</td>\n",
-       "      <td>116.0</td>\n",
-       "      <td>rec</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-5I4FCUo7AA</td>\n",
-       "      <td>you don't look like a superhero that it's alr...</td>\n",
-       "      <td>0.902851</td>\n",
-       "      <td>UCi9cDo6239RAzPpBZO9y5SA</td>\n",
-       "      <td>Are We Frenemies?! | Lele Pons, Hannah Stockin...</td>\n",
-       "      <td>are we frenemies lele pons hannah stocking anw...</td>\n",
-       "      <td>WATCH CELOSO MUSIC VIDEO HERE ▶ https://youtu....</td>\n",
-       "      <td>402.0</td>\n",
-       "      <td>rec</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          ytID                                         transcript  confidence  \\\n",
-       "0  --rJwJuXuOI   yeah Peter Fairly OddParents Danny Phantom TU...    0.931320   \n",
-       "1  -4XvTqhMbjo          season 2  if you have been watching since    0.920828   \n",
-       "2  -4YF2u-wx7A   what does feminism mean to you I think there'...    0.946498   \n",
-       "3  -4bGPF-8Syo   walking Hills like her she came in looking li...    0.854905   \n",
-       "4  -5I4FCUo7AA   you don't look like a superhero that it's alr...    0.902851   \n",
-       "\n",
-       "                  channelId  \\\n",
-       "0  UC80Z-cIOdR6upfnrPJ8Q00A   \n",
-       "1  UCIRwyPYF1_7mCplRFGB_Png   \n",
-       "2  UCi_BjZoqPnMmkCLv2FlyBxQ   \n",
-       "3  UCfm4y4rHF5HGrSr-qbvOwOg   \n",
-       "4  UCi9cDo6239RAzPpBZO9y5SA   \n",
-       "\n",
-       "                                               title  \\\n",
-       "0  Becoming a CARTOON! | Thomas Sanders feat. But...   \n",
-       "1            Tatianna featuring Katya The Same Parts   \n",
-       "2  What Does Feminism Mean to You? (Smart Snacks ...   \n",
-       "3  Three Girls, One Elevator (ft. Zendaya & Winni...   \n",
-       "4  Are We Frenemies?! | Lele Pons, Hannah Stockin...   \n",
-       "\n",
-       "                                                tags  \\\n",
-       "0  Thomas Sanders thomas sanders vine thomas sand...   \n",
-       "1                                                 []   \n",
-       "2  smart girls chvrches indie music independent l...   \n",
-       "3  iisuperwomanii iisuperwomenii superwoman super...   \n",
-       "4  are we frenemies lele pons hannah stocking anw...   \n",
-       "\n",
-       "                                         description  duration label  \n",
-       "0  By now, I think it's pretty apparent that I ha...     551.0   rec  \n",
-       "1  Night Of The Living Drag @ Stage 48 \\nNYC\\n10/...     394.0   rec  \n",
-       "2  Anna Bulbrook (GIRLSCHOOL, The Bulls, The Airb...      27.0   edu  \n",
-       "3  Wouldn't it be awesome if more women said hi t...     116.0   rec  \n",
-       "4  WATCH CELOSO MUSIC VIDEO HERE ▶ https://youtu....     402.0   rec  "
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "# TF-IDF Log. Reg. classifier for educational vs entertainment YouTube videos\n",
+    "## Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -154,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,23 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
-       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
-       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
-       "          verbose=0, warm_start=False)"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Train LR classifier\n",
     "classifier = LogisticRegression()\n",
@@ -212,17 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.83018868 0.88679245 0.88679245 0.90384615 0.86538462]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Test model accuracy, 5x cross validation\n",
     "x_test = vectorizer.transform(X_test_raw)\n",
@@ -232,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,23 +89,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "        edu       0.86      0.84      0.85       123\n",
-      "        rec       0.86      0.88      0.87       140\n",
-      "\n",
-      "avg / total       0.86      0.86      0.86       263\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# report metrics\n",
     "from sklearn.metrics import classification_report\n",
@@ -284,21 +117,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['This transcript was classified as rec, with a probability of 0.5616719480565042']\n",
-      "should I get your jacket that you took mine is not dead or something like that it's because of romantic movies they set the bar too high for the rest of us what does the same thing every year I thought about it actually idea that we should do that is a trailer and also the mean \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Single prediction\n",
-    "text = X_test_raw[16]\n",
+    "text = X_test_raw[16]c\n",
     "exemplar = vectorizer.transform([text]) # example string\n",
     "exemplar_cat = classifier.predict(exemplar) # returns category\n",
     "exemplar_prob = classifier.predict_proba(exemplar) # returns probability\n",
@@ -313,17 +137,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['you know' 'with my' 'somebody']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Most important features\n",
     "feature_array = np.array(vectorizer.get_feature_names())\n",
@@ -336,18 +152,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "## Save trained LR model\n",
     "import pickle\n",
     "\n",
-    "file_Name = \"classifier_edu\"\n",
-    "\n",
-    "fileObject = open(file_Name,'wb') \n",
-    "pickle.dump(classifier,fileObject)   \n",
-    "fileObject.close()"
+    "pickle.dump(vectorizer, open(\"vectorizer_edu.pickle\", \"wb\"))\n",
+    "pickle.dump(classifier, open(\"classifier_edu.pickle\", \"wb\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classification with canned model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.linear_model.logistic import LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorizer = pickle.load(open(\"vectorizer_edu.pickle\", \"rb\"))\n",
+    "classifier = pickle.load(open(\"classifier_edu.pickle\", \"rb\"))"
    ]
   },
   {
@@ -356,11 +199,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# To open the file for reading\n",
-    "fileObject = open(file_Name,'rb')\n",
-    "classifier_pol_bias = pickle.load(fileObject)  \n",
-    "fileObject.close()"
+    "# Single prediction\n",
+    "with open('N7-dg88gj6M_t.txt', 'r') as myfile:\n",
+    "             transcript=myfile.read().replace('\\n', '')\n",
+    "        \n",
+    "text = transcript\n",
+    "\n",
+    "exemplar = vectorizer.transform([text]) # example string\n",
+    "exemplar_cat = classifier.predict(exemplar) # returns category\n",
+    "exemplar_prob = classifier.predict_proba(exemplar) # returns probability\n",
+    "\n",
+    "if exemplar_prob[0][0] > exemplar_prob[0][1]:\n",
+    "    class_prob = exemplar_prob[0][0]\n",
+    "else: class_prob = exemplar_prob[0][1]\n",
+    "\n",
+    "print('This transcript was classified as ' + exemplar_cat + ', with a probability of ' + str(class_prob))\n",
+    "print(text[1:280])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Most important features\n",
+    "feature_array = np.array(vectorizer.get_feature_names())\n",
+    "tfidf_sorting = np.argsort(exemplar.toarray()).flatten()[::-1]\n",
+    "\n",
+    "n = 3\n",
+    "top_n = feature_array[tfidf_sorting][:n]\n",
+    "print(top_n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
