Bad word finder added

--- a/bad_word_finder.ipynb
+++ b/bad_word_finder.ipynb
@@ -10,25 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "transcript = []\n",
-    "with open('transcript.txt','r') as f:\n",
-    "    for line in f:\n",
-    "        for word in line.split():\n",
-    "           transcript.append(word) \n",
+    "transcript = 'This is some Fucked up shit'\n",
     "\n",
-    "# insert some bad words\n",
-    "transcript[0] = 'shit'\n",
-    "transcript[10] = 'shit'\n",
-    "transcript[42] = 'fuck'"
+    "transcript = transcript.lower().split()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,12 +34,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['fucked', 'shit']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bad_words = [i for i in transcript if i in badwords ]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "badwords_in_transcript =  len([i for i in transcript if i in badwords ])"
-   ]
+   "source": []
   }
  ],
  "metadata": {
